--- a/coursera_wleproj.Rmd
+++ b/coursera_wleproj.Rmd
@@ -45,13 +45,13 @@ pmltesting <- read.csv(url("http://d396qusza40orc.cloudfront.net/predmachlearn/p
 dim(pmltraining);dim(pmltesting)
 ```
 
-We first check the data quality in training dataset. We first convert '#DIV/0!' in a numeric field to 'NA', then use function `colSums` to identify columns that contains missing values. 
+We check the data quality in training dataset before modeling. We first convert `#DIV/0!` in a numeric field to `NA`, then use function `colSums` to identify columns that contains missing values. 
 
-These columns together with a number of columns of timestamps are removed from both training set. The same cleaning rule is then applied to the testing dataset.
+These columns together with a number of timestamp columns are removed from the training dataset. The same cleaning rule is then applied to the testing dataset.
 
-(We also tried to remove missing record by rows but it turned out to be inapplicable because 98% of data would have been removed.)
+(We also tried to remove missing records by rows but it turned out to be inapplicable because 98% of rows contain at least one missing value in a certain field.)
 
-We also separated the testing dataset into testing and validation partitions. Set seed so the same result can be reproduced.
+We also separated the testing dataset into testing and validating partitions. Set seed so the same result can be reproduced.
 ```{r}
 # To see the missing values
 # summary(pmltraining)
@@ -62,7 +62,7 @@ prePro[prePro=='#DIV/0!']<-NA
 nona<-colSums(is.na(prePro)) == 0
 nona[c(1,3:5)]<-FALSE
 
-#set.seed(1234)
+set.seed(1234)
 mlData<-pmltraining[,nona]
 inTrain<-createDataPartition(y=mlData$classe,p=0.5,list=F)
 training<-mlData[inTrain,]
@@ -75,7 +75,7 @@ testing<-pmltesting[,nona]
 ###Exploratory plots
 
 Don't know what plots are appropriate yet ...
-```{r}
+```{r echo=FALSE}
 toPlot<-sqldf('select
               classe,
               total_accel_belt,
@@ -92,14 +92,16 @@ qplot(total_accel_belt,total_accel_arm,col=classe,data=training,
 ###Data preprocessing
 
 Tried PCA but it didn't help - will drop from the writeup
-```{r}
+```{r echo=FALSE}
 # to see the predictors
 # names(training)
 lastCol<-ncol(training)
-preProc<-preProcess(training[,-c(1:6,lastCol)],method='pca',thresh=.99)
+preProc<-preProcess(training[,-c(1:6,lastCol)],method='pca',thresh=.995)
 trainPC<-predict(preProc,training[,-c(1:6,lastCol)])
 validPC<-predict(preProc,validating[,-c(1:6,lastCol)])
 testPC<-predict(preProc,testing[,-c(1:6,lastCol)])
+system.time(PCFit<-randomForest(training$classe~.,data=trainPC))
+PCFit
 
 ```
 
@@ -110,30 +112,34 @@ testPC<-predict(preProc,testing[,-c(1:6,lastCol)])
 # system.time(modFit<-train(classe~.,method='rf',data=trainPC,prox=T))
 # modFit$finalModel
 
-system.time(PCFit<-randomForest(training$classe~.,data=trainPC,ntree=500))
-PCFit
-system.time(modFit<-randomForest(classe~.,data=training,ntree=500))
+system.time(modFit<-randomForest(classe~.,data=training)) #reduce ntree=200 when it is slow
 modFit
 
 ```
+We have a pretty decent model from our training data. The out of box estimate of __error rate is 0.6%__.
 
-###Validation
+On the other hand, PC fit is not as good as the fit from all training data, even we kept 99.5% threshood in the PCA model.
+
+To estimate out of sample error, we use the validation data for cross-validation.
+
+###Cross-Validation
 ```{r}
-pred<-predict(PCFit,validPC)
-table(pred,validating$classe)
 pred<-predict(modFit,validating)
-table(pred,validating$classe)
+a<-table(pred,validating$classe)
+oos<-1-sum(diag(a))/sum(a)
+a
 ```
 
+The estimated __out of sample error is `r round(1-oos,4)*100`%__.
+
 ###Testing
-Notice that the variable 'new_window' in testing dataset doesn't have the same levels as that in the training data. We have to add a new level 'yes' into it before it can be used in the model fit from the training model.
+We now come to testing stage. We need to predict the outcomes from the 20 testing data records labeled by `problem_id_1` to `problem_id_20` using the random forest model we just built.
+
+Notice that the variable `new_window` in testing dataset doesn't have the same levels as that in the training data. We have to add a new level `yes` into it before it can be used in the model fit from the training model.
+
 ```{r}
 levels(testing$new_window)<-c(levels(testing$new_window),'yes')
-pred<-predict(modFit,testing)
-pred
-
-##  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 
-##  B  A  B  A  A  E  D  B  A  A  B  C  B  A  E  E  A  B  B  B 
+answers<-predict(modFit,testing)
 ```
 
 [Here is the GitHub page.](http://lisun7170.github.io/pml/coursera_wleproj.html)
